# step-functions-sample

./: .gitignore  LICENSE  README.md  cdk.json  package.json  rome.json
lib/: LambdaLayerStack.ts  LambdaStack.ts  S3Stack.ts  StepFunctionsStack.ts  props.ts  step-functions-sample-stack.ts
lib/src/: PokeUrl.py  Pokemon.py  README.md  aggregator.py  extract_1.py  extract_2.py  extract_3.py  get_records.py  pyproject.toml  requirements.txt
test/: step-functions-sample.test.ts
