[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["SuperMekabu <yuki.military@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.150"
pokebase = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
